[build-system]
requires = ['setuptools', 'setuptools_scm']
build-backend = 'setuptools.build_meta'


[project]
name = 'bindtool'
description = 'Preprocessor for Bind9 zone files'
readme = 'README.md'
requires-python = '>= 3.7'
dependencies = [
	'py3dns >= 3.1.0, < 4.0.0',
	'python-ldap >= 3.2.0, < 4.0.0',
	'pyasn1 >= 0.4.5, < 1.0.0',
	'setuptools; python_version < "3.9"',
]
dynamic = ['version']


[[project.authors]]
name = 'Peter Linss'
email = 'peter@linss.com'


[project.urls]
homepage = 'https://gitlab.linss.com/open-source/bindtool'


[project.scripts]
bindtool = "bindtool:run"


[project.optional-dependencies]
dev = [
	'types-PyYAML',
	'types-setuptools',
	'mypy',
	'flake8',
	'flake8-annotations',
	'flake8-bandit',
	'flake8-bugbear',
	'flake8-commas',
	'flake8-comprehensions',
	'flake8-continuation',
	'flake8-datetimez',
	'flake8-docstrings',
	'flake8-import-order',
	'flake8-keyword-params',
	'flake8-literal',
	'flake8-modern-annotations',
	'flake8-noqa',
	'flake8-pyproject',
	'flake8-requirements',
	'flake8-typechecking-import',
	'flake8-use-fstring',
	'pep8-naming',
]


[tool.setuptools_scm]


[tool.flake8]
ignore = ['D102', 'D105', 'D107', 'D401', 'W503', 'ANN002', 'ANN003', 'ANN101', 'ANN102', 'ANN401', 'FS003', 'S110', 'S303', 'S324']
max-line-length = 160


[tool.flake8.known-modules]
py3dns = ['DNS']


[tool.mypy]
mypy_path = 'stubs'

[[tool.mypy.overrides]]
module = ['DNS', 'ldap', 'importlib.metadata']
ignore_missing_imports = true
